Add platforms (need links) and features

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
             
                 <dt>Platforms:</dt>
                 <dd>
-                    <a href="link_for_platform">Name of Platform</a>
-                </dd>
-                <dd>
-                    <a href="link_for_platform2">Name of Platform #2</a>
+                    <a href="link_for_platform">Windows / Linux / Mac</a>
                 </dd>
             
+                <dd>
+                  <a href="link_for_platform">WebGL</a>
+                </dd>
+
                 <dt>Website:</dt>
                 <dd>
                   <a href="https://github.com/rodsters/CrunchTime">github.com/rodsters/CrunchTime</a>
@@ -118,8 +119,11 @@
 
               <h2 id="features">Features</h2>
               <ul>
-                <li>Feature #1</li>
-                <li>Feature #2</li>
+                <li>Race the clock with a time-based resource management system.</li>
+                <li>Rapid gunplay and combat.</li>
+                <li>Shop and upgrade system.</li>
+                <li>One main level dungeon to explore.</li>
+                <li>Smooth enemy pathfinding with steering and spacing behavior.</li>
               </ul>
             </article>
           </section>
