Add image header with game name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="page grid">
       <nav class="page-nav nav grid__item">
         <h1 class="nav__title">
-          <div>Crunch Time</div>
+          <div>The Individuals</div>
         </h1>
       
         <div class="nav__toggle" id="hamburger">
@@ -64,6 +64,7 @@
 
       <div class="page-wrapper grid__item">
         <header class="page-header">
+          <img src="./images/header.png" alt="Crunch Time" title="Crunch Time">
         </header>
 
         <main class="page-content" role="main">
