Add platform links

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             
                 <dt>Platforms:</dt>
                 <dd>
-                    <a href="link_for_platform">Windows / Linux / Mac</a>
+                    <a href="https://rodsters.itch.io/crunchtimedownload">Windows / Linux / Mac</a>
                 </dd>
             
                 <dd>
-                  <a href="link_for_platform">WebGL</a>
+                  <a href="https://rodsters.itch.io/crunchtime-webversion">WebGL</a>
                 </dd>
 
                 <dt>Website:</dt>
