--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
 
             <article class="description grid__item">
               <h2 id="description">Description</h2>
-              <p>Cruch Time is a top-down dungeon crawler with...</p>
+              <p>Cruch Time is a top-down dungeon crawler where you play to defeat time.
+                As time counts down, the player must race to defeat all the enemies.
+                Get fun upgrades and try to beat you best time!
+              </p>
               
               <h2 id="history">History</h2>
               <p>Crunch Time was a project created by a group of students at UC Davis during Spring Quarter 2022 for ECS 189L: Gameplay Programming.
@@ -213,7 +216,7 @@
             <dl>
               <dt>Documenting the Process</dt>
               <dd>
-                Check out our documented work in creating this project! <a href="https://github.com/rodsters/CrunchTime/blob/main/README.md">github link</a>.
+                Check out our documented work in creating this project! <a href="https://github.com/rodsters/CrunchTime/blob/main/ProjectDocument.md">github link</a>.
               </dd>
             </dl>
           </section>
