--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <h2 id="description">Description</h2>
               <p>Cruch Time is a top-down dungeon crawler where you play to defeat time.
                 As time counts down, the player must race to defeat all the enemies.
-                Get fun upgrades and try to beat you best time!
+                Get fun upgrades and try to beat your best time!
               </p>
               
               <h2 id="history">History</h2>
